--- a/bibliography.bib
+++ b/bibliography.bib
@@ -326,3 +326,28 @@
     urldate = {2021-04-14},
     year={2021}
 }
+
+
+@online{Greenplum,
+	title = {{Greenplum DB}},
+	author = {kapustor},
+	url = {https://habr.com/ru/company/tinkoff/blog/267733/},
+	urldate = {2015-10-13},
+	year={2015}
+}
+
+@online{DatabaseSharding,
+	title = {{Database Sharding – System Design Interview Concept}},
+	author = {anuupadhyay},
+	url = {https://www.geeksforgeeks.org/database-sharding-a-system-design-concept/},
+	urldate = {2021-09-02},
+	year={2021}
+}
+
+@online{Replication,
+	title = {{Путеводитель по репликации баз данных}},
+	author = {hard_sign},
+	url = {https://habr.com/ru/post/514500/},
+	urldate = {2020-08-10},
+	year={2020}
+}
