--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -587,92 +587,452 @@ TPM на базе UNIX опирается на фундаментальное п
 
 \subsection{Тиражирование данных}
 \textbf{Тиражирование данных} - это асинхронный перенос изменений объектов исходной базы данных (source database)
-в базы данных, принадлежащие к различным узлам распределенной системы.
-Функции тиражирования данных возложены на специальный компонент СУБД - сервер тиражирования данных,
-называемый репликатором (replicator), задача которого состоит в обеспечении идентичности данных в принимающих
-базах данных (target database) данным в исходной БД.
+в базы данных, принадлежащие к различным узлам распределенной системы. Тиражирование данных может происходит
+двумя различными способами: \textbf{шардингом} (или, иначе говоря, шардированием, фрагментацией) и \textbf{репликацией}.
 
-\paragraph{Обзор средств тиражирования данных}~\\
-На практике установка тиражируемой системы сводится к чисто административным действиям, для выполнения которых
-необходимо получить ответы на четыре вопроса: \textbf{Что} тиражировать? \textbf{Где} тиражировать? \textbf{Когда}
-тиражировать? \textbf{Как разрешать} предполагаемые конфликты?
+\paragraph{Шардинг (sharding)} ~\\
+\textbf{Шардинг} (иногда \textbf{шардирование}) — это принцип проектирования базы данных, при котором логически
+независимые части базы данных хранятся раздельно, заранее сгруппированные в секции, которые, в свою очередь, размещаются
+на разных, физически и логически независимых серверах базы данных, при этом один физический узел кластера может
+содержать несколько серверов баз данных. Шардирование желательно для повышения производительности системы, поскольку
+в этом случае данные могут храниться в том месте, где они чаще всего используются, что позволяет достичь локализации
+большинства операций и уменьшения сетевого трафика.
 
-\bigbreak
-\textbf{Что тиражировать?}
-Как и любая другая методология, тиражирование имеет собственную терминологию. Краеугольным камнем
-тиражирования является понятие согласованного распределенного набора данных (consistent distributed data set - CDDS).
-Фактически, это тот самый набор данных в базе (или база данных целиком), идентичность которого на всех узлах, вовлеченных
-в процесс тиражирования, и поддерживает репликатор. Здесь и далее мы будем говорить об узлах распределенной
-системы, хотя участвовать в тиражировании могут и базы данных, расположенные на одном узле.
+Существует два основных вида шардирования: \textbf{горизонтальное} и \textbf{вертикальное}; они соответствуют
+реляционным операциям сокращения и проекции. В более общем случае фрагмент можно представить в виде результата
+произвольного сочетания операций сокращения и проекции. Они являются произвольными, если не учитывать описанные ниже
+условия. В случае операции сокращения это должна быть ортогональная декомпозиция в смысле, никакие две переменные
+отношения в базе данных не должны иметь перекрывающихся смысловых значений. В случае операции проекции это должна быть
+декомпозиция без потерь. То есть декомпозиция на множество таких проекций, которые обладают следующими свойствами:
+исходные данные могут быть восстановлены за счет обратной операции соединения проекций и ни одна из проекций в процессе
+такого восстановления не бывает избыточной.
 
-CDDS может быть представлен следующими конфигурациями данных:
+Благодаря этим двум правилам все фрагменты данной переменной отношения будут независимыми, т.е. ни один из фрагментов
+не может быть представлен как производный от других фрагментов, а также, вообще говоря, не может содержать результат
+операции сокращения или проекции, который может быть получен на основании данных, хранящихся на других узлах.
+
+Говоря о шардинге, стоит отметить одну важную особенность. Система, которая поддерживает шадирование данных, должна
+поддерживать и независимость от шадирования. Другими словами, пользователи должны иметь возможность работать точно так,
+по крайней мере, с логической точки зрения, как если бы данные в действительности были вовсе не шардированы.
+Независимость от шардирования — это весьма желательное свойство, поскольку позволяет упростить разработку
+пользовательских программ и выполнение терминальных операций. В частности, это свойство гарантирует, что в любой момент
+данные могут быть заново восстановлены (а фрагменты перераспределены) в ответ на изменение требований к эффективности
+работы системы, причем ни пользовательские программы, ни терминальные операции при этом не затрагиваются.
+
+Таким образом, если обеспечивается независимость от шардирования, пользователи получают данные в виде некоторого
+представления, в котором шарды логически скомбинированы с помощью соответствующих операций соединения и объединения.
+К обязанностям системного оптимизатора относится определение шардов, к которым требуется физический доступ для
+выполнения любого из поступивших запросов пользователя. \autocite{IntroBD2014}
+
+\paragraph{Алгоритмы шардинга} ~\\
+Ранее уже упоминалось о двух основных вида шардинга: горизонтальный и вертикальный. Стоит их разобрать по подробнее и
+рассказать и про другие виды шардирования, такие как шадинг на основе каталогов и шардинг на основе ключей.
+
+\paragraph{Горизонтальное шардирование} ~\\
+В этом методе мы разбиваем данные на основе диапазонов заданного значения, присущего каждой сущности. Допустим, у вас
+есть база данных имен ваших онлайн-клиентов и информации об электронной почте. Вы можете разделить эту информацию на
+два осколка. В одном осколке вы можете хранить информацию о клиентах, чье имя начинается с A-P, а в другом - информацию
+об остальных клиентах.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/Horizontal-Sharding}
+    \caption{Горизонтальное шардирование}
+    \label{fig:Horizontal-Sharding}
+\end{figure}
+
+\textbf{Горизонтальное шардирование} - самый простой метод сегментирования для реализации. Каждый осколок содержит
+другой набор данных, но все они имеют ту же схему, что и исходная база данных. В этом методе вам просто нужно
+определить, в какой диапазон попадают ваши данные, а затем вы можете сохранить запись в соответствующий шард. Этот
+метод лучше всего подходит для хранения нестатических данных (например, хранение контактной информации студентов
+колледжа).
+
+Недостатком этого метода является то, что данные могут быть неравномерно распределены по шардам. В приведенном выше
+примере у вас может быть много клиентов, имена которых попадают в категорию A-P. В таких случаях первый осколок должен
+будет взять на себя больше нагрузки, чем второй, и это может стать узким местом системы. \autocite{DatabaseSharding}
+
+\paragraph{Вертикальное шардирование} ~\\
+В этом методе мы разделяем весь столбец из таблицы и помещаем эти столбцы в новые отдельные таблицы. Данные полностью
+независимы от одного раздела к другому. Кроме того, каждый раздел содержит как отдельные строки, так и столбцы. Возьмем,
+к примеру, функции Twitter. Мы можем разделить различные функции объекта на разные сегменты на разных машинах. В
+Твиттере у пользователя может быть профиль, количество подписчиков и некоторые твиты, опубликованные им самим. Мы можем
+разместить профили пользователей на одном осколке, подписчиков - на втором, а твиты - на третьем.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/Vertical-Sharding}
+    \caption{Вертикальное шардирование}
+    \label{fig:Vertical-Sharding}
+\end{figure}
+
+В этом методе вы можете отделить и обработать критическую часть (например, профили пользователей) от некритической части
+ваших данных (например, сообщения в блоге) по отдельности и построить вокруг нее различные модели репликации и
+согласованности. Это одно из главных преимуществ этого метода.
+
+Основным недостатком этой схемы является то, что для ответа на некоторые запросы вам, возможно, придется комбинировать
+данные из разных шардов, что неоправданно увеличивает сложность разработки и эксплуатации системы. Кроме того, если
+ваше приложение будет расти позже, и вы добавите в него еще несколько функций, вам придется дополнительно сегментировать
+базу данных с конкретными функциями на нескольких серверах. \autocite{DatabaseSharding}
+
+\paragraph{Шардинг на основе каталогов} ~\\
+В этом методе мы создаем и поддерживаем службу поиска или таблицу поиска для исходной базы данных. В основном мы
+используем ключ осколка для таблицы поиска и делаем сопоставление для каждого объекта, существующего в базе данных.
+Таким образом, мы отслеживаем, какие осколки базы данных содержат какие данные.
+
+Таблица поиска содержит статический набор информации о том, где можно найти конкретные данные. На приведенном выше
+изображении вы можете видеть, что мы использовали зону доставки в качестве ключа осколка. Во-первых, клиентское
+приложение запрашивает службу поиска, чтобы узнать осколок (раздел базы данных), на котором размещены данные. Когда
+служба поиска возвращает осколок, она запрашивает/обновляет этот осколок.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/Directory-Based-Sharding}
+    \caption{Шардинг на основе каталогов}
+    \label{fig:Directory-Based-Sharding}
+\end{figure}
+
+Сегментация на основе каталогов гораздо более гибкая, чем сегментация на основе диапазонов и ключей. В сегменте на
+основе диапазонов вы обязаны указать диапазоны значений. В key-based вы обязаны использовать фиксированную хэш-функцию,
+которую трудно изменить позже. При таком подходе вы можете использовать любой алгоритм, который хотите назначить для
+записей данных в сегменты. Кроме того, при таком подходе легко динамически добавлять шарды.
+
+Основным недостатком этого подхода является единственная точка отказа таблицы поиска. Если он будет поврежден или не
+удался, это повлияет на запись новых данных или доступ к существующим данным из таблицы. \autocite{DatabaseSharding}
+
+\paragraph{Шардинг на основе ключей} ~\\
+Этот метод также известен как сегментация на основе хэша. Здесь мы берем значение объекта, такого как идентификатор
+клиента, адрес электронной почты клиента, IP-адрес клиента, почтовый индекс и т. д., и мы используем это значение в
+качестве входных данных хэш-функции. Этот процесс генерирует хэш-значение, которое используется для определения того,
+какой шард нам нужно использовать для хранения данных. Мы должны иметь в виду, что значения, введенные в хэш-функцию,
+должны поступать из одного и того же столбца (ключ осколка), чтобы данные размещались в правильном порядке и
+согласованно. В принципе, ключи осколков действуют как первичный ключ или уникальный идентификатор для отдельных строк.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/Keybased-Sharding}
+    \caption{Шардинг на основе ключей}
+    \label{fig:Keybased-Sharding}
+\end{figure}
+
+Рассмотрим пример, что у вас есть 3 сервера баз данных, и каждый запрос имеет идентификатор приложения, который
+увеличивается на 1 каждый раз, когда регистрируется новое приложение. Чтобы определить, на каком сервере должны быть
+размещены данные, мы выполняем операцию по модулю для этих приложений id с номером 3. Затем остаток используется для
+идентификации сервера для хранения наших данных.
+
+Недостатком этого метода является эластичная балансировка нагрузки, что означает, если вы попытаетесь динамически
+добавлять или удалять серверы баз данных, это будет сложный и дорогостоящий процесс. Например, в приведенном выше
+примере, если вы добавите еще 5 серверов, вам нужно добавить больше соответствующих хэш-значений для дополнительных
+записей. Кроме того, большинство существующих ключей необходимо переназначить на их новое, правильное хэш-значение,
+а затем перенести на новый сервер. Хэш-функция должна быть изменена с модуля 3 на модуль 8. В то время как миграция
+данных действует, как новые, так и старые хэш-функции не будут действительны. Во время миграции ваше приложение не
+сможет обслуживать большое количество запросов, и вы будете испытывать простои для своего приложения до завершения
+миграции. \autocite{DatabaseSharding}
+
+\paragraph{Географический шардинг} ~\\
+Шардирование по географическому признаку позволяет хранить определенные данные вблизи своих потребителей и
+удовлетворять нормативным требованиям, когда данные должны находиться в определенной юрисдикции. Однако данный способ
+шардирования не является самодостаточным: шарды могут быть загружены не равномерно, и отличие может быть на порядки.
+На пример, экземпляр базы данных, хранящий данные пользователей Москвы и Московской области, будет намного превышать
+другой экземпляр базы данных, который хранит информацию о пользователях из Владимира. Таким образом, недостатком
+данного метода является необходимость дополнительного использования других методов шардирования.
+
+\paragraph{Репликация} ~\\
+\textbf{Репликация} — это процесс изменения одного набора данных, называемого репликой, в ответ на изменения другого
+набора данных, называемого основным. Репликация желательна по крайней мере по двум причинам. Во-первых, она способна
+обеспечить более высокую производительность, поскольку приложения смогут обрабатывать локальные копии вместо того,
+чтобы устанавливать связь с удаленными узлами. Во-вторых, наличие репликации может также обеспечивать более высокую
+степень доступности, поскольку любой реплицируемый объект остается доступным для обработки (по крайней мере, для выборки
+данных), пока хотя бы одна реплика в системе остается доступной. Главным недостатком репликации, безусловно, является
+то, что если реплицируемый объект обновляется, то и все его копии должны быть обновлены (проблема распространения
+обновлений).
+
+Очевидно, что репликация, как и шардирование, теоретически должна быть "прозрачной для пользователя". Другими словами,
+система, которая поддерживает репликацию данных, должна также поддерживать независимость от репликации (иногда говорят
+"прозрачность репликации"). Для пользователей должна быть создана такая среда, чтобы они, по крайней мере, с логической
+точки зрения могли считать, что в действительности данные не дублируются. Независимость от репликации (как и
+независимость от шардирования) является весьма желательной, поскольку она упрощает создание пользовательских программ и
+выполнение терминальных операций. В частности, независимость от репликации позволяет создавать и уничтожать дубликаты в
+любой момент в соответствии с изменяющимися требованиями, не затрагивая при этом никакие из пользовательских программ
+или терминальных операций.
+
+Из требования независимости от репликации следует, что к обязанностям системного оптимизатора также относится
+определение, какой именно из физических дубликатов будет применен для доступа к данным при выполнении каждого
+введенного пользователем запроса. \autocite{IntroBD2014}
+
+Можно выделить три \textbf{подхода к репликации}:
 \begin{itemize}
-    \item Вся база данных
-    \item Избранные объекты базы данных: таблицы или представления
-    \item Вертикальные проекции объектов БД: избранные столбцы таблиц и/или представлений
-    \item Горизонтальные подмножества объектов: избранные записи из таблиц и/или представлений
-    \item Сочетание наборов 2-4
+    \item Блочная репликация на уровне системы хранения данных;
+    \item Физическая репликация на уровне СУБД;
+    \item Логическая репликация на уровне СУБД.
 \end{itemize}
 
-\bigbreak
-\textbf{Где тиражировать?}
+\paragraph{Блочная репликация} ~\\
+При блочной репликации каждая операция записи выполняется не только на основном диске, но и на резервном. Таким образом
+тому на одном массиве соответствует зеркальный том на другом массиве, с точностью до байта повторяющий основной том.
 
-Следующий основополагающий элемент схемы тиражирования - это путь переноса изменений
-(data propagation path - DPP) из каждой тиражируемой базы данных в другие БД. Гибкость тиражирования
-в значительной степени обеспечивается богатством выбора способа передачи данных между узлами распределенной системы.
+К достоинствам такой репликации можно отнести простоту настройки и надёжность. Записывать данные на удалённый диск может
+либо дисковый массив, либо нечто (устройство или программное обеспечение), стоящее между хостом и диском. Если дисковый
+массив не способен реплицировать данные, между хостом и массивом может быть установлен агент, осуществляющей запись на
+два массива сразу. Агент может быть как отдельным устройством, так и программным компонентом. В отличие от дискового
+массива, который может работать только с таким же массивом или, как минимум, с массивом того же производителя, агент
+может работать с совершенно разными дисковыми устройствами.
 
-Практика эксплуатации распределенных систем подсказала следующие схемы тиражирования данных, реализуемые репликатором:
+Главное назначение блочной репликации – обеспечение отказоустойчивости. Если база данных потеряна, то можно
+перезапустить её с использованием зеркального тома. Блочная репликация хороша своей универсальностью, но за
+универсальность приходится платить.
 
+Во-первых, никакой сервер не может работать с зеркальным томом, поскольку его операционная система не может управлять
+записью на него; с точки зрения наблюдателя данные на зеркальном томе появляются сами собой. В случае аварии (отказ
+основного сервера или всего ЦОДа, где находится основной сервер) следует остановить репликацию, размонтировать основной
+том и смонтировать зеркальный том. Как только появится возможность, следует перезапустить репликацию в обратном
+направлении.
+
+Во-вторых, сама СУБД на резервном сервере может быть запущена только после монтирования диска. В некоторых операционных
+системах, например, в Solaris, память под кеш при выделении размечается, и время разметки пропорционально объёму
+выделяемой памяти, то есть старт экземпляра будет отнюдь не мгновенным. Плюс ко всему кеш после рестарта будет пуст.
+
+В-третьих, после запуска на резервном сервере СУБД обнаружит, что данные на диске неконсистентны, и нужно потратить
+значительное время на восстановление с применением журналов повторного выполнения: сначала повторить те транзакции,
+результаты которых сохранились в журнале, но не успели сохраниться в файлы данных, а потом откатить транзакции, которые
+к моменту сбоя не успели завершиться. \autocite{Replication}
+
+\paragraph{Физическая репликация (master-slave)} ~\\
+Журналы (redo log или write-ahead log) содержат все изменения, которые вносятся в файлы базы данных. Идея физической
+репликации состоит в том, что изменения из журналов повторно выполняются в другой базе (реплике), и таким образом данные
+в реплике повторяют данные в основной базе байт-в-байт.
+
+Журналы СУБД не предназначены для использования вне этой платформы, их формат не документируется и может меняться без
+предупреждения. Отсюда совершенно естественное требование, что физическая репликация возможна только между экземплярами
+одной и той же версии одной той же СУБД. Отсюда же возможные ограничения на операционную систему и архитектуру
+процессора, которые тоже могут влиять на формат журнала.
+
+Естественно, никаких ограничений на модели СХД физическая репликация не накладывает. Более того, файлы в базе-реплике
+могут располагаться совсем по-другому, чем на базе-источнике – надо лишь описать соответствие между томами, на которых
+лежат эти файлы.
+
+Запись данных в реплику невозможна, поскольку изменения в неё приходят побайтно, и реплика не может обеспечить
+конкурентное исполнение своих запросов. В случае повреждения файла в основной базе можно просто скопировать
+соответствующий файл с реплики. Однако стоит учесть, что файл на реплике может быть не идентичен файлу в основной базе:
+когда файл расширяется, новые блоки в целях ускорения ничем не заполняются, и их содержимое случайно. База может
+использовать не всё пространство блока (например, в блоке может оставаться свободное место), но содержимое
+использованного пространства совпадает с точностью до байта.
+
+Физическая репликация может быть как синхронной, так и асинхронной. При асинхронной репликации всегда есть некий набор
+транзакций, которые завершены на основной базе, но ещё не дошли до резервной, и в случае перехода на резервную базу при
+сбое основной эти транзакции будут потеряны. При синхронной репликации завершение операции commit означает, что все
+журнальные записи, относящиеся к данной транзакции, переданы на реплику. Важно понимать, что получение репликой журнала
+не означает применения изменений к данным. При потере основной базы транзакции не будут потеряны, но если приложение
+пишет данные в основную базу и считывает их из реплики, то у него есть шанс получить старую версию этих данных.
+
+Физическая репликация базы данных имеет множество преимуществ перед репликацией средствами СХД:
 \begin{itemize}
-    \item Центр-филиалы", изменения в БД филиалов переносятся в центральную БД, и /или наоборот
-    \item Равноправное, несколько БД разделяют общий набор изменяемых и тиражируемых данных
-    \item Каскадное, изменения в одной БД переносятся в другую БД, откуда в свою очередь в третью БД и т. д.,
-    эта схема позволяет оптимизировать баланс загрузки серверов баз данных, расположенных на различных узлах
-    \item Через шлюзы изменения в базе данных могут переносится в БД другой СУБД
-    \item Различные комбинации всех перечисленных выше схем
+    \item объём передаваемых данных меньше за счёт того, что передаются только журналы, но не файлы с данными; эксперименты показывают уменьшение трафика в 5-7 раз;
+    \item переключение на резервную базу происходит значительно быстрее: экземпляр-реплика уже поднят, поэтому при переключении ему нужно лишь откатить активные транзакции; более того, к моменту сбоя кеш реплики уже прогрет;
+    \item на реплике можно выполнять запросы, сняв тем самым часть нагрузки с основной базы. В частности, реплику можно использовать для создания резервных копий.
 \end{itemize}
 
-\bigbreak
-\textbf{Когда тиражировать?}
-
-После определения тиражируемого набора данных и маршрута переноса изменений остается определить лишь момент
-инициации репликационного сервера. Как уже говорилось раньше, элементарным изменением, вызывающим реакцию
-репликатора, является транзакция, но тиражировать каждую транзакцию по одиночке было бы не всегда удобным.
-Например, было бы трудно зафиксировать состояние в принимающей базе данных на определенный час. Стремясь быть
-максимально гибким, репликатор предоставляет следующие возможности:
-
+\paragraph{Логическая репликация (active-active)} ~\\
+Все изменения в базе данных происходят в результате вызовов её API – например, в результате выполнения SQL-запросов.
+Очень заманчивой кажется идея выполнять одну и ту же последовательность запросов на двух разных базах. Для репликации
+необходимо придерживаться двух правил:
 \begin{itemize}
-    \item тиражирование начинается после завершения определенного числа транзакций, в том числе и после каждой транзакции
-    \item тиражирование происходит через равные промежутки или к определенному моменту времени
-    \item процесс тиражирования контролируется вручную администратором системы или созданным пользователем
-    монитором тиражирования
+    \item нельзя начинать транзакцию, пока не завершены все транзакции, которые должны закончиться раньше; Так на рисунке ниже нельзя запускать транзакцию D, пока не завершены транзакции A и B;
+    \item нельзя завершать транзакцию, пока не начаты все транзакции, которые должны закончиться до завершения текущей транзакции; Так на рисунке ниже даже если транзакция B выполнилась мгновенно, завершить её можно только после того, как начнётся транзакция C.
 \end{itemize}
 
-\bigbreak
-\textbf{Как разрешать конфликты?}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/ReplicationExample}
+    \caption{Пример репликации}
+    \label{fig:ReplicationExample}
+\end{figure}
 
-Конфликты, возникающие в некоторых ситуациях, например, при встречном тиражировании или при
-восстановлении базы данных с помощью репликатора из реплицированной копии, можно отнести к разряду планируемых
-проблем. Репликатор при необходимости самостоятельно обнаруживает противоречия в тиражируемых данных и предоставляет
-разрешение конфликта администратору (противоречивые данные обязательно регистрируются в журнале), либо
-делает это автоматически. Возможны следующие варианты:
-
+\textbf{Репликация команд (statement-based replication)} реализована, например, в MySQL. К сожалению, эта простая схема не
+приводит к появлению идентичных наборов данных – тому есть две причины.
 \begin{itemize}
-    \item разрешение конфликта в пользу более раннего или более позднего изменения
-    \item разрешение конфликта в пользу наивысшего приоритета тиражируемой записи
+    \item не все API детерминированы. Например, если в SQL-запросе встречается функция now() или sysdate(), возвращающая текущее время, то на разных серверах она вернёт разный результат – из-за того, что запросы выполняются не одновременно. Кроме того, к различиям могут привести разные состояния триггеров и хранимых функций, разные национальные настройки, влияющие на порядок сортировки, и многое другое.
+    \item репликацию, основанную на параллельном исполнении команд, невозможно корректно приостановить и перезапустить. На рисунке выше если репликация остановлена в момент T1 транзакция B должна быть прервана и откачена. При перезапуске репликации исполнение транзакции B может привести реплику к состоянию, отличному от состояния базы-источника: на источнике транзакция B началась до того, как закончилась транзакция A, а значит, она не видела изменений, сделанных транзакцией A. Репликация запросов может быть остановлена и перезапущена только в момент T2, когда в базе нет ни одной активной транзакции. Разумеется, на сколько-нибудь нагруженной промышленной базе таких моментов не бывает.
 \end{itemize}
 
-\paragraph{Эффективные алгоритмы тиражирования}~\\
-
-Алгоритмы тираживания:
+Обычно для логической репликации используют детерминированные запросы. Детерминированность запроса обеспечивается двумя
+свойствами:
 \begin{itemize}
-    \item Алгоритм восстановления данных при тиражировании
-    \item Алгоритм создания копии при тиражировании данных
+    \item запрос обновляет (или вставляет, или удаляет) единственную запись, идентифицируя её по первичному (или уникальному) ключу;
+    \item все параметры запроса явно заданы в самом запросе.
 \end{itemize}
 
-Более подробно об алгоритмах тиражирования можно почитать тут
-(https://www.hse.ru/data/2010/08/04/1218737056/iTECH10\-Lyadova\_Strelkov.pdf)
-\paragraph{Сравнение подходов к тиражированию БД}
+В отличие от \textbf{репликации команд (statement-based replication)} такой подход называется \textbf{репликацией
+записей (row-based replication)}.
+
+База-реплика открыта и доступна не только на чтение, но и на запись. Это позволяет использовать реплику для выполнения
+части запросов, в том числе для построения отчётов, требующих создания дополнительных таблиц или индексов. Важно
+понимать, что логическая реплика будет эквивалентна исходной базе только в том случае, если в неё не вносится никаких
+дополнительных изменений
+
+Логическая репликация предоставляет ряд возможностей, отсутствующих в других видах репликации:
+\begin{itemize}
+    \item настройка набора реплицируемых данных на уровне таблиц (при физической репликации – на уровне файлов и табличных пространств, при блочной репликации – на уровне томов);
+    \item построение сложных топологий репликации – например, консолидация нескольких баз в одной или двунаправленная репликация;
+    \item уменьшение объёма передаваемых данных;
+    \item репликация между разными версиями СУБД или даже между СУБД разных производителей;
+    \item обработка данных при репликации, в том числе изменение структуры, обогащение, сохранение истории.
+\end{itemize}
+
+Есть и недостатки, которые не позволяют логической репликации вытеснить физическую:
+\begin{itemize}
+    \item все реплицируемые данные обязаны иметь первичные ключи;
+    \item логическая репликация поддерживает не все типы данных;
+    \item логическая репликация на практике не бывает полностью синхронной: время от получения изменений до их применения слишком велико, чтобы основная база могла ждать;
+    \item логическая репликация создаёт большую нагрузку на реплику;
+    \item при переключении приложение должно иметь возможность убедиться, что все изменения с основной базы, применены на реплике – СУБД зачастую сама не может этого определить, так как для неё режимы реплики и основной базы эквивалентны.
+\end{itemize}
+
+Два последних недостатка существенно ограничивают использование логической реплики как средства отказоустойчивости. Если
+один запрос в основной базе изменяет сразу много строк, реплика может существенно отставать. А возможность смены ролей
+требует недюжинных усилий как со стороны разработчиков, так и со стороны администраторов.
+
+Есть несколько способов реализации логической репликации, и каждый из этих способов реализует одну часть возможностей и
+не реализует другую:
+\begin{itemize}
+    \item репликация триггерами;
+    \item использование журналов СУБД;
+    \item использование программного обеспечения класса CDC (change data capture);
+    \item прикладная репликация.
+\end{itemize}
+
+\paragraph{Репликация триггерами} ~\\
+Триггер – хранимая процедура, которая исполняется автоматически при каком-либо действии по модификации данных. Триггеру,
+который вызывается при изменении каждой записи, доступны ключ этой записи, а также старые и новые значения полей. При
+необходимости триггер может сохранять новые значения строк в специальную таблицу, откуда специальный процесс на стороне
+реплики будет их вычитывать
+
+\textbf{Преимущества}:
+\begin{itemize}
+    \item независимость от версий основной базы и реплики;
+    \item широкие возможности преобразования данных.
+\end{itemize}
+
+\textbf{Недостатки}:
+\begin{itemize}
+    \item нагрузка на основную базу;
+    \item большая задержка при репликации.
+\end{itemize}
+
+\paragraph{Использование журналов СУБД} ~\\
+Сами СУБД также могут предоставлять возможности логической репликации. Источником данных, как и для физической
+репликации, являются журналы. К информации о побайтовом изменении добавляется также информация об изменённых полях, а
+также значение уникального ключа, даже если он не меняется. В результате объём журналов БД увеличивается – по разным
+оценкам от 10 до 15%.
+
+К \textbf{недостаткам} данного подхода можно отнести увеличение объёма журналов и возможное увеличение трафика между
+узлами.
+
+\paragraph{Использование CDC} ~\\
+Существует целый класс программного обеспечения, предназначенного для организации логической репликации. Это ПО
+называется CDC, change data capture. В задачу платформы входит чтение журналов базы данных, преобразование информации,
+передача информации на реплику и применение. Как и в случае репликации средствами самой СУБД, журнал должен содержать
+информацию об изменённых полях. Использование дополнительного приложения позволяет «на лету» выполнять сложные
+преобразования реплицируемых данных и строить достаточно сложные топологии репликации.
+
+\textbf{Преимущества}:
+\begin{itemize}
+    \item возможность репликации между разными СУБД, в том числе загрузка данных в отчётные системы;
+    \item широчайшие возможности обработки и преобразования данных;
+    \item минимальный трафик между узлами – платформа отсекает ненужные данные и может сжимать трафик;
+    \item встроенные возможности мониторинга состояния репликации.
+\end{itemize}
+
+\textbf{Недостатки}:
+\begin{itemize}
+    \item увеличение объёма журналов, как при логической репликации средствами СУБД;
+    \item новое ПО – сложное в настройке и/или с дорогими лицензиями.
+\end{itemize}
+
+\paragraph{Прикладная репликация} ~\\
+Наконец, ещё один способ репликации – формирование векторов изменений непосредственно на стороне клиента. Клиент должен
+формировать детерминированные запросы, затрагивающие единственную запись. Добиться этого можно, используя специальную
+библиотеку работы с базой данных. Когда приложение завершает транзакцию, специально подключаемый модуль записывает
+вектор изменений в очередь и выполняет транзакцию в базе данных. Специальный процесс-репликатор вычитывает векторы из
+очереди и выполняет транзакции в базе-реплике.Этот механизм хорош для обновления отчётных систем. Может он
+использоваться и для обеспечения отказоустойчивости, но в этом случае в приложении должен быть реализован контроль
+состояния репликации
+
+\textbf{Преимущества}:
+\begin{itemize}
+    \item возможность репликации между разными СУБД, в том числе загрузка данных в отчётные системы;
+    \item возможность обработки и преобразования данных, мониторинга состояния и т. д.;
+    \item минимальный трафик между узлами – платформа отсекает ненужные данные и может сжимать трафик;
+    \item полная независимость от базы данных – как от формата, так и от внутренних механизмов.
+\end{itemize}
+
+\textbf{Недостатки}:
+\begin{itemize}
+    \item ограничения на архитектуру приложения;
+    \item огромный объём собственного кода, обеспечивающего репликацию.
+\end{itemize}
+
+\paragraph{Сравнение подходов к репликации} ~\\
+Описав все подходы к репликации, можно установить следующее:
+\begin{itemize}
+    \item \textbf{Блочная репликация} имеет смысл, когда других способов репликации нет; для баз данных её лучше не использовать.
+    \item \textbf{Физическая репликация} хороша, когда требуется обеспечение отказоустойчивости инфраструктуры или перенос части читающих приложений на реплики.
+    \item \textbf{Логическая репликация} подходит для обеспечения отказоустойчивости только в том случае, если приложение знает об этой репликации и умеет в случае аварии ждать синхронизации реплик.
+    \item \textbf{Логическая репликация} идеальна для всевозможных отчётных баз.
+    \item \textbf{Репликация триггерами} имеет смысл в том случае, если база сильно нагружена, а реплицировать нужно крайне ограниченное количество информации.
+    \item \textbf{Платформы CDC} хороши, если у вас большое количество реплицируемых баз и/или есть необходимость сложных преобразований данных.
+    \item Разработка \textbf{прикладной репликации} оправдана только в случае разработки собственной платформы или фреймворка.
+\end{itemize} \autocite{Replication}
+
+\paragraph{Greenplum} ~\\
+Ранее уже сравнивались различные подходы шардирования между собой. Сравнивались различные подходы репликации между
+собой. Осталось только сравнить способы тиражирования, то есть сравнить репликацию и шардирование.
+
+Вообще говоря, шардинг и репликация не противоречат друг другу и могут сосуществовать. Они выполняют разные задачи, и
+сравнивать их не имеет смысла. Репликация используется для ускорения взаимодействия с бд с помощью использования копий
+основной базы данных. Кроме того, репликация осуществляет отказоустойчивость. В свою очередь шардинг осуществляет
+ускорение работы с базой данных с помощью разбиения исходной базы данных на несколько разных, хранящихся на разных
+серверах.  Шардирование не реализует отказоустойчивость.
+
+В принципе, на этом их сравнение можно закончить и перейти к примеру. Один из классических примеров в котором
+реализовано сочетание репликации и шардирования - \textbf{Greenplum}.
+
+\textbf{Greenplum (GP)} – реляционная СУБД, имеющая массово-параллельную (massive parallel processing) архитектуру без
+разделения ресурсов (Shared Nothing). В общем случае кластер GP состоит из нескольких серверов-сегментов (именно
+сегменты непосредственно хранят данные, выполняют с ними операции и отдают результаты мастеру (в общем случае). По сути
+сегмент – самый обычный инстанс PostgreSQL 8.2.15 с настроенной логической репликацией в своё зеркало на другом
+сервере), одного сервера-мастера (сервер, на котором работает инстанс, являющийся одновременно координатором и входной
+точкой для пользователей в кластере), и одного сервера-секондари-мастера (инстанс, являющийся резервным мастером,
+включается в работу в случае недоступности основного мастера (переключение происходит вручную)), соединённых между
+собой одной или несколькими быстрыми (10g, infiniband) сетями, обычно обособленными (interconnect). На рисунке ниже
+представлен состав кластера и сетевое взаимодействие элементов. Здесь — зелёная и красная линии — обособленные сети
+interconnect, синяя линия — внешняя, клиентская сеть.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=100mm]{assets/distributed/Greenplum}
+    \caption{Состав кластера и сетевое взаимодействие элементов Greenplum}
+    \label{fig:Greenplum}
+\end{figure}
+
+При выборе числа серверов-сегментов важно правильно выбрать соотношение кластера «число процессоров/Тб данных» в
+зависимости от планируемого профиля нагрузки на БД — чем больше процессорных ядер приходится на единицу данных, тем
+быстрее кластер будет выполнять «тяжёлые» операции, а также работать со сжатыми таблицами.
+
+При выборе числа сегментов в кластере (которое в общем случае к числу серверов никак не привязано) необходимо помнить
+следующее:
+\begin{itemize}
+    \item все ресурсы сервера делятся между всеми сегментами на сервере (нагрузкой зеркал, в случае если они располагаются на этих же серверах, можно условно пренебречь);
+    \item каждый запрос на одном сегменте не может потреблять процессорных ресурсов больше, чем одно ядро CPU. Это означает, например, что, если кластер состоит из 32-ядерных серверов с 4-я сегментами GP на борту и используется в среднем для обработки 3-4 одновременных тяжёлых, хорошо утилизирующих CPU, запросов, «в среднем по больнице» CPU не будет утилизироваться оптимально. В данной ситуации лучше увеличить число сегментов на сервере до 6-8;
+    \item штатный процесс бекапа и рестора данных «из коробки» работает только на кластерах, имеющих одинаковое число сегментов. Восстановить данные, забекапленные на кластере из 96 сегментов, в кластер из 100 сегментов без напильника будет невозможно.
+\end{itemize}
+
+В Greenplum реализуется классическая схема шардирования данных. Каждая таблица представляет из себя N+1 таблиц на всех
+сегментах кластера, где N – число сегментов (+1 в этом случае — это таблица на мастере, данных в ней нет). На каждом
+сегменте хранится 1/N строк таблицы. Логика разбиения таблицы на сегменты задаётся ключом (полем) дистрибуции – таким
+полем, на основе данных которого любую строку можно отнести к одному из сегментов.
+
+По подробнее почитать про Greenplum можно в источнике. В данной главе приведена только краткая информация об общей
+архитектуре и информация, относящаяся к тиражированию данных. \autocite{Greenplum}
 
 \subsection{Интеграция БД и Internet}
 \paragraph{Современные тенденции}
